--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,14 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :first_name, required: true, autofocus: true, input_html: { autocomplete: "first_name" } %>
+    <%= f.input :last_name, required: true, autofocus: true, input_html: { autocomplete: "last_name" } %>
+    <%= f.input :phone_number, required: true, autofocus: true, input_html: { autocomplete: "phone_number" } %>
+    <%= f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email" } %>
+
+    <% if resource.instructor? %>
+      <%= f.input :location, required: true, autofocus: true, input_html: { autocomplete: "location" } %>
+    <% end %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
