--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,13 @@
-<h1>Add a Review</h1>
+<h1>New Review</h1>
 
-<%= simple_form_for [@instructor, @review] do |f| %>
-  <%= f.input :description %>
-  <%= f.submit "Submit review", class: "btn btn-primary" %>
+<%= form_with(model: @review, url: reviews_path, method: :post) do |form| %>
+  <%= form.label :rating %>
+  <%= form.text_field :rating %>
+
+  <%= form.label :description %>
+  <%= form.text_field :description %>
+
+  <%= form.hidden_field :booking_id, value: @booking.id %>
+
+  <%= form.submit "Create Review" %>
 <% end %>
