--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,43 +1,87 @@
-<div class="container w-50 shadow p-5 rounded" style="background-color: rgba(255, 255, 255, 0.8);">
-  <h2>Sign up</h2>
+<head>
+    <title>Signup Form</title>
+    <style>
 
-  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: :false }) do |f| %>
-    <%= f.error_notification %>
+        .signup-form {
+            max-width: 300px;
+            margin: 0 auto;
+            padding: 20px;
+        }
 
-    <div class="form-inputs">
-      <%= f.input :first_name,
-                   required: true,
-                   autofocus: true,
-                   input_html: { autocomplete: "first_name" } %>
-      <%= f.input :last_name,
-                   required: true,
-                   autofocus: true,
-                   input_html: { autocomplete: "last_name" } %>
-      <%= f.input :phone_number,
-                   required: true,
-                   autofocus: true,
-                   input_html: { autocomplete: "phone_number" } %>
-      <%= f.input :email,
-                   required: true,
-                   autofocus: true,
-                   input_html: { autocomplete: "email" } %>
-      <%= f.input :password,
-                   required: true,
-                   hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                   input_html: { autocomplete: "new-password" } %>
-      <%= f.input :password_confirmation, required: true,
-                  input_html: { autocomplete: "new-password" } %>
+        .signup-form h1 {
+            text-align: center;
+        }
+        .signup-form h6 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .signup-form label,
+        .signup-form input {
+            display: block;
+            margin-bottom: 10px;
+        }
+        .signup-form input[type="text"],
+        .signup-form input[type="email"],
+        .signup-form input[type="password"] {
+            padding: 10px;
+            border: none;
+            border-bottom: 1px solid black;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        .signup-form button {
+            display: block;
+            width: 100%;
+            margin-top: 10px;
+            padding: 10px;
+            background-color: orange;
+            border: none;
+            border-radius: 20px;
+            color: #fff;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        .signup-form p {
+            text-align: center;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div class="signup-form">
+        <h1>Sign Up</h1>
+        <h6>First, create your account</h6>
 
-      <%= f.input :instructor, as: :boolean,
-                   inline_label: true, label: "Teacher",
-                   input_html: { checked: true } %>
-      <%= f.input :location, required: true, autofocus: true, input_html: { autocomplete: "location" } %>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: :false }) do |f| %>
+        <%= f.error_notification %>
+
+          <%= f.input :first_name,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "first_name" } %>
+          <%= f.input :last_name,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "last_name" } %>
+          <%= f.input :phone_number,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "phone_number" } %>
+          <%= f.input :email,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "email" } %>
+          <%= f.input :password,
+                      required: true,
+                      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                      input_html: { autocomplete: "new-password" } %>
+          <%= f.input :password_confirmation, required: true,
+                      input_html: { autocomplete: "new-password" } %>
+
+        <button> <%= f.button :submit, "Sign Up" %> </button>
+
+        <% end %>
+
+        <p>Already have an account? <a href="login.html">Login</a></p>
     </div>
-
-    <div class="form-actions">
-      <%= f.button :submit, "Sign up" %>
-    </div>
-  <% end %>
-
-  <%= render "devise/shared/links" %>
-</div>
+</body>
