--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,19 +1,41 @@
-<h1>New Booking</h1>
-
-<%= form_with(model: @booking, url: bookings_path, method: :post) do |form| %>
-  <%= form.label :date %>
-  <%= form.date_field :date %>
-
-  <%= form.hidden_field :user_id, value: current_user.id %>
-
-  <%= form.label :car_transmission %>
-  <%= form.select :car_transmission, ['Automatic', 'Manual', 'Hybrid'] %>
-
-  <%= form.label :time %>
-  <%= form.select :time, [['30m', '30 minutes'], ['1h', '1 hour'], ['2h', '2 hours']] %>
-
-  <%= form.label :booked_user_id, "Instructor" %>
-  <%= form.collection_select :booked_user_id, User.where(instructor: true), :id, :full_name %>
-
-  <%= form.submit "Create Booking" %>
-<% end %>
+<div class='container  bg-secondary-subtle col-10 my-5 rounded'>
+  <h1 class='text-center py-3'>New Booking</h1>
+    <div class='container'>
+      <%= form_with(model: @booking, url: bookings_path, method: :post) do |form| %>
+      <div class='row px-4 mb-3'>
+          <div class='container text-center rounded py-1', style='background-color:#FFE500'>
+            <%= form.label :date %>
+            <br>
+            <%= form.date_field :date %>
+          </div>
+      </div>
+      <%= form.hidden_field :user_id, value: current_user.id %>
+      <div class='row px-4 mb-3'>
+        <div class='container text-center rounded py-1', style='background-color:#FFE500'>
+          <%= form.label :car_transmission %>
+          <br>
+          <%= form.select :car_transmission, ['Automatic', 'Manual'] %>
+        </div>
+      </div>
+      <div class='row px-4 mb-3'>
+        <div class='container text-center rounded py-1', style='background-color:#FFE500'>
+          <%= form.label :time %>
+          <br>
+          <%= form.select :time, [['30m', '30 minutes'], ['1h', '1 hour'], ['2h', '2 hours']] %>
+        </div>
+      </div>
+      <div class='row px-4 mb-3 pb-4'>
+        <div class='container text-center rounded py-1', style='background-color:#FFE500'>
+          <%= form.label :booked_user_id, "Instructor" %>
+          <br>
+          <%= form.collection_select :booked_user_id, User.where(instructor: true), :id, :full_name %>
+        </div>
+      </div>
+    </div>
+</div>
+<div class='container'>
+      <div class="mx-auto p-2" style="width: 200px;">
+        <%= form.submit "Create Booking", class:'btn btn-primary', style:'width: 100%; background-color: #FF7A00' %>
+      <% end %>
+      </div>
+</div>
