--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,7 +31,9 @@
       <%= f.input :instructor, as: :boolean,
                    inline_label: true, label: "Teacher",
                    input_html: { checked: true } %>
-      <%= f.input :location, required: true, autofocus: true, input_html: { autocomplete: "location" } %>
+      <%= f.input :location,
+                  input_html: {data: {location_autocomplete_target: "location"}, class: "d-none"},
+                  wrapper_html: {data: {controller: "location-autocomplete", location_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}} %>
     </div>
 
     <div class="form-actions">
