updated paths in footer and removed paths from navbar

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,5 @@
 <div class="navbar">
-  <a href="#">Home</a>
-  <a href="#">Search</a>
-  <a href="#">Messages</a>
-  <a href="#">Profile</a>
+  <a href="/">Home</a>
+  <a href="/bookings">Bookings</a>
+  <%= link_to "Profile", user_path(current_user) %>
 </div>
