fixed the whole thing

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,4 +13,4 @@
 
 <p><strong>Instructor:</strong> <%= @user.instructor? ? 'Yes' : 'No' %></p>
 
-<%= link_to "Edit Profile", edit_user_registration_path(params[:id]), class: "btn btn-primary" %>
+<%# <%= link_to "Edit Profile", edit_user_registration_path(params[:id]), class: "btn btn-primary" %> %>
