--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Review</h1>
 
-<%= form_with(model: @review, url: reviews_path, method: :post) do |form| %>
+<%= simple_form_for [@booking, @review] do |form| %>
   <%= form.label :rating %>
   <%= form.text_field :rating %>
 
