--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,8 +8,8 @@
     </a>
     <%# <a href="/chatroom">
     </a> %>
-    <%= link_to user_path(current_user) do %>
+    <a href="#">
       <i class="fas fa-user white-icon"></i>
-    <% end %>
+    </a>
   </div>
 </footer>
