--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,53 +1,60 @@
- <style>
-    body {
-      background-color: #f0f0f0;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
+<style>
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 40px 20px;
+  text-align: center;
+  position: relative;
+}
 
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 40px 20px;
-      text-align: center;
-    }
+.search-bar {
+  position: absolute;
+  top: 120px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: -40px;
+}
 
-    h1 {
-      font-size: 28px;
-      margin-bottom: 20px;
-    }
+.search-bar input[type="text"] {
+  padding: 10px;
+  width: 250px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+}
 
-    .search-bar {
-      margin-bottom: 20px;
-    }
+.center-image {
+  text-align: center;
+  margin-top: 80px;
+}
 
-    .search-bar input[type="text"] {
-      padding: 10px;
-      width: 300px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-    }
+.center-image img {
+  max-width: 100%;
+  height: 350px;
+  border-radius: 5px;
+}
 
-    .center-image {
-      margin-top: 40px;
-    }
-
-    .center-image img {
-      max-width: 100%;
-      height: auto;
-    }
-  </style>
+h1 {
+  font-size: 28px;
+  margin-bottom: 10px;
+}
+</style>
 </head>
+
 <body>
-   <div class="container">
+  <div class="container">
     <h1>Welcome to DriveGuru</h1>
     <div class="search-bar">
-      <input type="text" placeholder="Search..." />
     </div>
+      <input type="text" placeholder="Search..." />
+      <input type="submit" value="Search" class="btn btn-primary" />
+      
     <div class="center-image">
-      <img src="https://res.cloudinary.com/dblraorbo/image/upload/v1686073102/Drive%20Guru/driving.jpg" alt="App Image" />
+      <img src="https://res.cloudinary.com/dblraorbo/image/upload/v1686165364/Drive%20Guru/hello_drive_3.gif" alt="App Image"/>
     </div>
   </div>
 </body>
