--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -1,18 +1,42 @@
-<body class="payment-bg">
-  <div class= "container w-25 shadow p-5 rounded text-center" style = "background-color: rgba(255, 255, 255, 0.8); position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+<!DOCTYPE html>
+<html>
+<head>
+  <style>
+    body {
+      background-color: #f2f2f2;
+    }
+
+    .container {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #fff;
+      padding: 20px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      text-align: center;
+    }
+
+    h1 {
+      margin-top: 0;
+    }
+
+    .btn {
+      margin-top: 20px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
     <h1>Payment Successful</h1>
     <form class="row g-3">
-<%#
-     <div class="card text-center"> %>
-      <div class="card-body" style ="height: 200px text-align: center ;">
-
-    <%# <h5 class="card-title">Track Order Status</h5> %>
-
-    <p class="card-text">Thank you for your payment.</p>
-
-    <a href="/" class="btn btn-primary">Continue</a>
-  <%# </div> %>
-</div>
-
-
-</form>
+      <div class="card text-center">
+        <div class="card-body">
+          <p class="card-text">Thank you for your payment.</p>
+          <a href="/" class="btn btn-primary">Continue</a>
+        </div>
+      </div>
+    </form>
+  </div>
+</body>
+</html>
