--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,12 +1,15 @@
 <h1>All Bookings</h1>
 
-<% @bookings.each do |booking| %>
-  <div>
-    <p>Date: <%= booking.date %></p>
-    <p>User: <%= booking.booker.email %></p>
-    <p>Car Transmission: <%= booking.car_transmission %></p>
-    <p>Time: <%= booking.time %></p>
-    <p>Booked User: <%= booking.booked_user.email %></p>
-    <hr>
-  </div>
-<% end %>
+<ul class="list-group">
+  <% @user.bookings.each do |booking| %>
+    <li class="list-group-item">
+      <%= booking.date %>
+      <%= booking.time %>
+      <%= link_to "Delete",
+        booking_path(booking),
+        data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+      %>
+    </li>
+  <% end %>
+</ul>
+<br>
