--- a/app/views/instructors/show.html.erb
+++ b/app/views/instructors/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Instructors in <%= @address %></h1>
-
-<% @instructors.each do |instructor| %>
-<% end %>
+<h1><%= @instructor.company_name %></h1>
+<p><strong>Car Transmission:</strong> <%= @instructor.car_transmission %></p>
+<p><strong>Work Phone Number:</strong> <%= @instructor.work_phone_number %></p>
+<p><strong>Region:</strong> <%= @instructor.address %></p>
