--- a/app/views/instructors/show.html.erb
+++ b/app/views/instructors/show.html.erb
@@ -2,8 +2,11 @@
 <p><strong>Car Transmission:</strong> <%= @instructor.car_transmission %></p>
 <p><strong>Work Phone Number:</strong> <%= @instructor.work_phone_number %></p>
 <p><strong>Region:</strong> <%= @instructor.address %></p>
-
-<!-- Your booking form code goes here -->
+<div style="width: 80%; height: 250px;"
+  data-controller="map"
+  data-map-markers-value="<%= @markers.to_json %>"
+  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+</div>
 
 <%= link_to "Book Now", new_booking_path(instructor_id: @instructor.id), class: "btn btn-primary" %>
 <%= link_to "Back to Instructors", instructors_path, class: "btn btn-primary" %>
