--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,9 +9,9 @@
     <%= f.input :phone_number, required: true, autofocus: true, input_html: { autocomplete: "phone_number" } %>
     <%= f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email" } %>
 
-    <% if resource.instructor? %>
-      <%= f.input :location, required: true, autofocus: true, input_html: { autocomplete: "location" } %>
-    <% end %>
+    <%# <% if resource.instructor? %>
+      <%# <%= f.input :address, required: true, autofocus: true, input_html: { autocomplete: "address" } %>
+    <%# <% end %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
