--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -24,26 +24,27 @@
   .form-actions {
     margin-top: 20px;
   }
+
+  .back-button {
+    margin-right: 10px;
+  }
 </style>
 
 <h1 class="new-booking-title">New Booking</h1>
 
-<%= simple_form_for(@booking) do |f| %>
+<%= simple_form_for(@booking, url: checkout_path) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.label :date, class: "form-label" %>
     <%= f.input :date, as: :string, input_html: { class: "form-control", type: "date" } %>
 
-    <%= f.label :From, class: "form-label" %>
-    <%= f.time_select :time, { class: "form-control", minute_step: 15, start_hour: 7, end_hour: 17 }, { prompt: true } %>
-
-    <%= f.label :To, class: "form-label" %>
-    <%= f.time_select :time, { class: "form-control", minute_step: 15, start_hour: 7, end_hour: 18 }, { prompt: true } %>
+    <%= f.label :time, class: "form-label" %>
+    <%= f.select :time, options_for_select(time_slots), { include_blank: true }, { class: "form-control" } %>
 
     <div class="form-group">
-      <label class="form-label">Car Transmission</label>
-      <p class="form-control-static"><%= @instructor.car_transmission %></p>
+      <%= f.label :car_transmission, class: "form-label" %>
+      <%= f.text_field :car_transmission, value: @instructor.car_transmission, class: "form-control", readonly: true %>
     </div>
 
     <%= f.hidden_field :user_id, value: current_user.id %>
@@ -51,6 +52,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, class: "btn btn-primary" %>
+    <%= link_to "Back", instructor_path(@instructor), class: "btn btn-primary" %>
+    <%= f.button :submit, "Submit", class: "btn btn-primary", data: { disable_with: "Submitting..." } %>
   </div>
 <% end %>
