--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,13 +1,8 @@
 <h1>New Review</h1>
 
-<%= simple_form_for [@booking, @review] do |form| %>
-  <%= form.label :rating %>
-  <%= form.text_field :rating %>
+<%= simple_form_for [@booking, @review] do |f| %>
+  <%= f.input :rating %>
+  <%= f.input :description %>
 
-  <%= form.label :description %>
-  <%= form.text_field :description %>
-
-  <%= form.hidden_field :booking_id, value: @booking.id %>
-
-  <%= form.submit "Create Review" %>
+  <%= f.submit "Create Review" %>
 <% end %>
