--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,8 @@
   padding: 40px 20px;
   text-align: center;
   position: relative;
+  background-image: url("https://res.cloudinary.com/dblraorbo/image/upload/v1686505224/Drive%20Guru/background_homepage.png"); /* Replace with the actual path to your image */
+  background-size: cover;
 }
 
 .search-bar {
@@ -55,8 +57,6 @@ h1 {
 
     <div class="center-image">
       <img src="https://res.cloudinary.com/dblraorbo/image/upload/v1686165364/Drive%20Guru/hello_drive_3.gif" alt="App Image"/>
-
-
     </div>
   </div>
 </body>
