--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <body class="home-page">
   <div class="container">
     <img src="https://res.cloudinary.com/dblraorbo/image/upload/v1686255430/Drive%20Guru/drive_guru_logo.svg" alt="Drive Guru Logo" class="logo">
-    <h1>Your Drive Guru awaits, <%= current_user.first_name %>!</h1>
+    <h1>Hi <%= current_user.first_name %>, your Drive Guru awaits!</h1>
     <a href="/instructors" class="explore-button">Click here!</a>
   </div>
 </body>
