link to , new booking to checkout

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -35,7 +35,7 @@
 </div>
 <div class='container'>
       <div class="mx-auto p-2" style="width: 200px;">
-        <%= form.submit "Create Booking", class:'btn btn-primary', style:'width: 100%; background-color: #FF7A00' %>
+       <a href="/checkout"> <%= form.submit "Create Booking", class:'btn btn-primary', style:'width: 100%; background-color: #FF7A00' %> </a>
       <% end %>
       </div>
 </div>
