--- a/app/assets/stylesheets/pages/_checkout.scss
+++ b/app/assets/stylesheets/pages/_checkout.scss
@@ -1,15 +1,25 @@
+// .container {
+//   padding: 20px;
+//   /* background-color:#E67E22; */
+//    margin-bottom: 20px;
+//    line-height: normal;
+//    width:900px;
+// }
 .checkout_banner {
-  width: 100%;
-  height: 30rem;
-  border-radius: 5rem;
-  color: white;
-  // background: url("https://optinmonster.com/wp-content/uploads/2018/04/checkout-page-optimization.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  font-size: 90px;
-  text-align: center;
-  font-weight: bold;
+    width: 100%;
+    height: 30rem;
+    border-radius: 10px;
+    color: white;
+    background-image: url("https://res.cloudinary.com/df6aeru2i/image/upload/v1686309679/robo_ubfkjc.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-size: 90px;
+    text-align: center;
+    font-weight: bold;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color:#E67E22;
   }
   .text-overlay {
     // position: absolute;
@@ -21,10 +31,13 @@
     font-weight: bold;
     color: rgb(0, 1, 4);
     padding: 10px;
+    font-size: 40px;
+    margin-bottom: 20px;
+
   }
 
   .tarif {
-
+    margin-bottom: 20px;
     text-align: center;
     font-size: 20px;
     font-weight: bold;
@@ -32,6 +45,11 @@
     padding: 10px;
   }
 
+  .tarif p {
+    margin: 0;
+    padding: 5px;
+    color: white;
+  }
   .payment-container {
 
     text-align: center;
@@ -39,4 +57,8 @@
     font-weight: bold;
     color: rgb(0, 0, 0);
     padding: 10px;
+  }
+  .payment-container label {
+    display: block;
+    margin-bottom: 10px;
   }
