--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,37 +6,39 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  // min-height: 100%;
 }
 
-.container {
-  flex: 1;
+.container--home {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   font-family: 'Montserrat', sans-serif;
-  background-image: url('https://res.cloudinary.com/dblraorbo/image/upload/v1686511739/Drive%20Guru/Unleash_Your_Driving_Potential_1240_1920_px_lhgok2.gif');
+  background-image: url('https://res.cloudinary.com/dblraorbo/image/upload/v1686164619/Drive%20Guru/hello_drive_2.gif');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  padding: 20px;
+  padding: 5px;
   box-sizing: border-box;
+  height: 100vh;
 }
 
-body.home-page h1 {
+.container--home h1 {
+  margin-top: auto;
+  margin-bottom: auto;
   font-size: 27px;
-  margin: 0;
+  // margin: 0;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   text-align: center;
   color: rgb(255, 255, 255);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 90%;
-  max-width: 500px;
+  // position: absolute;
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
+  // width: 90%;
+  // max-width: 500px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
@@ -61,10 +63,12 @@ body.home-page h1 {
 }
 
 .logo {
-  position: absolute;
-  top: 15px;
-  left: 50%;
-  transform: translateX(-50%);
+  display: block;
+  margin: 5px auto auto auto;
+  // position: absolute;
+  // top: 15px;
+  // left: 50%;
+  // transform: translateX(-50%);
   width: 60px;
   height: auto;
 }
