--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -29,7 +29,7 @@
       <%= text_field_tag :query,
             params[:query],
             class: "form-control",
-            placeholder: "Type a keyword"
+            placeholder: "Search by region"
         %>
       <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
     <% end %>
