--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,9 @@
 <div class="container--home">
   <img src="https://res.cloudinary.com/dblraorbo/image/upload/v1686255430/Drive%20Guru/drive_guru_logo.svg" alt="Drive Guru Logo" class="logo">
-  <h1>Hi <%= current_user.first_name %>, your Drive Guru awaits!</h1>
+  <% if current_user %>
+    <h1>Hi <%= current_user.first_name %>, your Drive Guru awaits!</h1>
+  <% else %>
+    <h1>Welcome to DriveGuru!</h1>
+  <% end %>
   <a href="/instructors" class="explore-button">Click here!</a>
 </div>
