--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 <p><strong>Name:</strong> <%= @user.full_name %></p>
 <p><strong>Email:</strong> <%= @user.email %></p>
 <p><strong>Phone Number:</strong> <%= @user.phone_number %></p>
-<p><strong>Address:</strong> <%= @user.address %></p>
+
 
 <div style="width: 80%; height: 250px;"
   data-controller="map"
@@ -11,4 +11,4 @@
   data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
 </div>
 
-<%# <%= link_to "Edit Profile", edit_user_registration_path(params[:id]), class: "btn btn-primary" %> %>
+<%# <%= link_to "Edit Profile", edit_user_registration_path(params[:id]), class: "btn btn-primary" %> 
