--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,7 +5,7 @@
     </a>
     <%= link_to bookings_path do %>
       <i class="fas fa-calendar-alt white-icon"></i>
-    </a>
+    <% end %>
     <%# <a href="/chatroom">
     </a> %>
     <% if current_user.present? %>
