added booking/new feature

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,34 +1,5 @@
-<div class='container  bg-secondary-subtle col-10 my-5 rounded'>
-  <h1 class='text-center py-3'>New Booking</h1>
-    <div class='container'>
-      <%= form_with(model: @booking, url: new_instructor_booking_path, method: :post) do |form| %>
-      <div class='row px-4 mb-3'>
-          <div class='container text-center rounded py-1', style='background-color:#FFE500'>
-            <%= form.label :date %>
-            <br>
-            <%= form.date_field :date %>
-          </div>
-      </div>
-      <%= form.hidden_field :user_id, value: current_user.id %>
-      <div class='row px-4 mb-3'>
-        <div class='container text-center rounded py-1', style='background-color:#FFE500'>
-          <%= form.label :car_transmission %>
-          <br>
-          <%= form.select :car_transmission, ['Automatic', 'Manual'] %>
-        </div>
-      </div>
-      <div class='row px-4 mb-3'>
-        <div class='container text-center rounded py-1', style='background-color:#FFE500'>
-          <%= form.label :time %>
-          <br>
-          <%= form.select :time, [['30m', '30 minutes'], ['1h', '1 hour'], ['2h', '2 hours']] %>
-        </div>
-      </div>
-    </div>
-</div>
-<div class='container'>
-      <div class="mx-auto p-2" style="width: 200px;">
-       <a href="/checkout"> <%= form.submit "Create Booking", class:'btn btn-primary', style:'width: 100%; background-color: #FF7A00' %> </a>
-      <% end %>
-      </div>
-</div>
+<%= simple_form_for([@instructor, @booking]) do |f| %>
+  <%= f.input :date %>
+  <%= f.input :time %>
+  <%= f.submit %>
+<% end %>
