waiting for access

--- a/app/views/instructors/show.html.erb
+++ b/app/views/instructors/show.html.erb
@@ -1,3 +1,4 @@
+<%= cl_image_tag @instructor.photo.key, height: 300, width: 400, crop: :fill %>
 <h1><%= @instructor.company_name %></h1>
 <p><strong>Car Transmission:</strong> <%= @instructor.car_transmission %></p>
 <p><strong>Work Phone Number:</strong> <%= @instructor.work_phone_number %></p>
