--- a/app/views/instructors/_form.html.erb
+++ b/app/views/instructors/_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for(instructor) do |f| %>
+  <%= f.input :photo, as: :file %>
   <%= f.input :company_name %>
   <%= f.input :address %>
   <%= f.input :car_transmission %>
