user photo, not test

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <h1>User Details</h1>
 
+<%= cl_image_tag @user.photo.key, height: 200, width: 200, crop: :fill, class: 'rounded-circle' %>
 <p><strong>Name:</strong> <%= @user.full_name %></p>
 <p><strong>Email:</strong> <%= @user.email %></p>
 <p><strong>Phone Number:</strong> <%= @user.phone_number %></p>
@@ -7,4 +8,4 @@
 <%= link_to "Edit Profile", edit_user_registration_path(params[:id]), class: "btn btn-primary" %>
 
 <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "btn btn-primary" %>
-<%# <%= link_to "Edit Profile", edit_user_registration_path(params[:id]), class: "btn btn-primary" %> 
+<%# <%= link_to "Edit Profile", edit_user_registration_path(params[:id]), class: "btn btn-primary" %>
