--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,6 +30,7 @@
       <%# <%= f.input :address,
                   input_html: {data: {location_autocomplete_target: "address"}, class: "d-none"},
                   wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}} %>
+      <%= f.input :photo, as: :file %>
     </div>
 
     <div class="form-actions">
