--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,12 @@
 <h1>User Details</h1>
 
-<%= cl_image_tag @user.photo.key, height: 200, width: 200, crop: :fill, class: 'rounded-circle' %>
+<% if @user.photo.key? %>
+  <%= cl_image_tag @user.photo.key, height: 200, width: 200, crop: :fill, class: 'rounded-circle' %>
+<% else %>
+  <p>No photo available</p>
+<% end %>
+
+<%# <%= cl_image_tag @user.photo.key, height: 200, width: 200, crop: :fill, class: 'rounded-circle' %> 
 <p><strong>Name:</strong> <%= @user.full_name %></p>
 <p><strong>Email:</strong> <%= @user.email %></p>
 <p><strong>Phone Number:</strong> <%= @user.phone_number %></p>
