centred logo in background

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -25,7 +25,7 @@ body {
 }
 
 .container--home h1 {
-  margin-top: auto;
+  margin-top: 4px;
   margin-bottom: auto;
   font-size: 27px;
   // margin: 0;
@@ -40,6 +40,10 @@ body {
   // width: 90%;
   // max-width: 500px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.container--home h1 span {
+  color: #ff7b00;
 }
 
 .explore-button {
@@ -59,16 +63,16 @@ body {
   box-shadow: rgb(255, 123, 0) -2px -2px 0px 2px, rgb(84, 233, 246) 0px 0px 0px 4px, rgba(0, 0, 0, 0.05) 0px 0px 2px 7px;
   transition: all 0.2s;
   margin-top: auto;
-  margin-bottom: 40%;
+  margin-bottom: 25%;
 }
 
 .logo {
   display: block;
-  margin: 5px auto auto auto;
+  margin: 102px auto auto auto;
   // position: absolute;
   // top: 15px;
   // left: 50%;
   // transform: translateX(-50%);
-  width: 60px;
+  width: 92px;
   height: auto;
 }
