--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -7,8 +7,7 @@
       <%= booking.time %>
       <%= link_to "Delete",
         booking_path(booking),
-        method: :delete,
-        data: { confirm: "Are you sure?" }
+        data: { turbo_method: :delete, confirm: "Are you sure?" }
       %>
     </li>
   <% end %>
