--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,20 +1,20 @@
 <div class="container col-10 container-form", style="background-color:#56CCF2">
   <h1 class="text-center py-4", style="color:#FFFFFF">New Booking</h1>
     <div class="container">
-      <%= simple_form_for([@instructor, @booking]) do |f| %>
+      <%= simple_form_for([@instructor, @booking], data: { controller: 'flatpickr' })  do |f| %>
         <div class="row mb-4 text-center justify-content-center">
           <div class="col-12 border-radius", style="background-color:#FFE500">
-            <%= f.input :date %>
+            <%= f.input :date, as: :string, input_html: { data: { flatpickr_target: "date" }, class: "center-text-date" } %>
           </div>
         </div>
         <div class="row mb-4 text-center justify-content-center">
           <div class="col-12 border-radius", style="background-color:#FFE500">
-            <%= f.input :time, collection: ['30 min', '1 h', '2 h'], input_html: { class: "center-text-time" } %>
+            <%= f.input :time, collection: ['30 min', '1 h', '2 h'], selected: "", input_html: { class: "center-text-time" } %>
           </div>
         </div>
         <div class="row mb-4 text-center justify-content-center">
           <div class="col-12 border-radius", style="background-color:#FFE500">
-            <%= f.input :car_type, collection: @instructor.car_type, input_html: { class: "center-text-car" } %>
+            <%= f.input :car_type, collection: @instructor.car_type, selected: "", input_html: { class: "center-text-car" } %>
           </div>
         </div>
       <div class="py-2 row mb-4 text-center justify-content-center">
