--- a/app/views/instructors/show.html.erb
+++ b/app/views/instructors/show.html.erb
@@ -1,22 +1,31 @@
-<%= cl_image_tag @instructor.photo.key, height: 200, width: 200, crop: :fill, class: 'rounded-circle' %>
-<h1><%= @instructor.company_name %></h1>
-<p><strong>Car Type:</strong> <%= @instructor.car_type.join(', ') %></p>
-<p><strong>Work Phone Number:</strong> <%= @instructor.work_phone_number %></p>
-<p><strong>Region:</strong> <%= @instructor.address %></p>
-<div style="width: 80%; height: 250px;"
-  data-controller="map"
-  data-map-markers-value="<%= @markers.to_json %>"
-  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+<div class="container-instructor-show">
+  <div class="hero-instructor">
+    <p class="back-link"><%= link_to "Back", instructors_path, class: "" %></p>
+  </div>
+  <div class="center">
+    <%= cl_image_tag @instructor.photo.key, height: 150, width: 150, crop: :fill, class: 'rounded-circle' %>
+    <h1><%= @instructor.company_name %></h1>
+    <p><strong>Car Type:</strong> <%= @instructor.car_type.join(', ') %></p>
+    <h3>Contact Details:</h3>
+    <p><strong>Work Phone Number:</strong> <%= @instructor.work_phone_number %></p>
+    <h3>Location:</h3>
+    <p><strong>Region:</strong> <%= @instructor.address %></p>
+    <div style="width: 85%; height: 250px;"
+      data-controller="map"
+      data-map-markers-value="<%= @markers.to_json %>"
+      data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+    </div>
+    <p><%= link_to "Book Now", new_instructor_booking_path(@instructor.id), class: "btn btn-primary" %></p>
+    <h3>Reviews:</h3>
+    <% if @reviews.nil? %>
+      <p>No reviews yet</p>
+    <% else %>
+      <% @reviews.each do |review| %>
+        <div class="review-block">
+          <p><%= review.rating %></p>
+          <p><%= review.description %></p>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
 </div>
-
-<p><%= link_to "Back to instructors", instructors_path, class: "btn btn-primary" %></p>
-<p><%= link_to "Book Now", new_instructor_booking_path(@instructor.id), class: "btn btn-primary" %></p>
-
-<% if @reviews.nil? %>
-  <p>No reviews yet</p>
-<% else %>
-  <% @reviews.each do |review| %>
-    <p><%= review.description %></p>
-    <p><%= review.rating %></p>
-  <% end %>
-<% end %>
