Auto stash before merge of "master" and "origin/master"

--- a/app/views/pages/checkout.html.erb
+++ b/app/views/pages/checkout.html.erb
@@ -11,9 +11,10 @@
       </div>
 
       <div class="payment-container ">
+      </div>
+      <div class= "tarif p">
         <input type="radio" id="cash" name="payment_method" value="cash">
         <label for="cash">Cash</label><br>
-
         <input type="radio" id="card" name="payment_method" value="card">
         <label for="card">Card Payment</label><br>
 
@@ -26,4 +27,4 @@
       </div>
     </form>
   </div>
-</div>
+ </div>
