--- a/app/assets/stylesheets/pages/_status.scss
+++ b/app/assets/stylesheets/pages/_status.scss
@@ -1,26 +1,87 @@
-.card-body {
-  width: 300px;
-  margin: 0 auto;
-  background-color: white;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  padding: 20px;
-  height: 400px;
-}
 // body {
 //   background-color: #f2f2f2;
 // }
+$iphone-12-pro-width: 390px;
+$iphone-12-pro-height: 844px;
+
 .container--status {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #fff;
+  width: $iphone-12-pro-width;
+  height: $iphone-12-pro-height;
+  margin: 0 auto;
   padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   text-align: center;
+
+  .card {
+    background-color: rgba(255, 165, 0, 0.5) !important;
+  }
+
+  .card-body {
+    width: 300px;
+    margin: 0 auto;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    padding: 20px;
+  }
+
+
+  h1 {
+    font-size: 28px;
+    color: #007bff;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  }
+
+  form {
+    width: 100%;
+
+    .card {
+      background-color: #f8f8f8;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+      .card-text {
+        margin-bottom: 20px;
+        font-size: 18px;
+        color: #555;
+      }
+
+      .btn-primary {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: #fff;
+        border-radius: 5px;
+        text-decoration: none;
+        transition: background-color 0.3s;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+        &:hover {
+          background-color: #0056b3;
+        }
+      }
+    }
+  }
+
+  a {
+    margin-top: 20px;
+    color: #007bff;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s;
+
+    &:hover {
+      color: #0056b3;
+    }
+  }
 }
+
 
 // h1 {
 //   margin-top: 0;
